--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;
-    background-color: rgb(246, 241, 208);
+body {
+  font-family: "Poppins", sans-serif;
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.6),
+      rgba(255, 255, 255, 0.6)
+    ),
+    url(./assets/pexels-hngstrm-1939485.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 /* navbar */
 
-nav, .nav-links{
-    display: flex;
+nav,
+.nav-links {
+  display: flex;
 }
 
-nav{
-    justify-content: space-around;
-    align-items: center;
-    height: 12vh;
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 10vh;
+  /* position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.nav-links{
-    display: flex;
-    gap: 2rem;
-    list-style: none;
-    
+.nav-links {
+  display: flex;
+  gap: 2rem;
+  list-style: none;
 }
 
-.nav-links-element{
-    font-size: 19px;
-    transition: transform 0.2s ease;
-    display: inline-block;
-    
+.nav-links-element {
+  font-size: 19px;
+  transition: transform 0.2s ease;
+  display: inline-block;
 }
 
-.nav-links-element:hover{
-    transform: scale(1.1);
+.nav-links-element:hover {
+  transform: scale(1.1);
 }
 
-.nav-links-element{
-    color: black;
-    text-decoration: none;
-    text-decoration-color: white;
+.nav-links-element {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
 }
 
-.nav-links-element:hover{
-    color: rgb(95, 90, 90);
-    text-decoration: underline;
-    text-decoration-color: rgb(95, 90, 90);
-    text-underline-offset: 0.5rem;
+.nav-links-element:hover {
+  color: rgb(95, 90, 90);
+  text-decoration: underline;
+  text-decoration-color: rgb(95, 90, 90);
+  text-underline-offset: 0.5rem;
 }
 
-.logo{
-    font-size: 2rem;
+.logo {
+  font-size: 2rem;
 }
 
-.logo:hover{
-    cursor: default;
+.logo:hover {
+  cursor: default;
 }
 
 /* .nav-divider{
@@ -93,111 +104,350 @@ nav{
     text-align: center;
 } */
 
-.welcome{
-    display: flex;
-    padding-top: 4vh;
-    margin: 0 10rem;
-    box-sizing: border-box;
-    min-height: fit-content;
-    justify-content: center;
-    gap: 5rem;
-    height: 80vh;
+/* main {
+  padding-top: 12vh;
+} */
+
+.welcome {
+  display: flex;
+  padding-top: 6vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
+  margin-bottom: 3.5rem;
+  padding-bottom: 2rem;
 }
 
-.image{
-    display: flex;
-    height: 400px;
-    width: 400px;
-    margin: auto 0;
+.image {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
 }
 
-.profile-img{
-    border-radius: 50%;
-    width: 100%;
-    height: auto;
+.profile-img {
+  border-radius: 30px;
+  width: 100%;
+  height: auto;
 }
 
-.content{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
-.intro{
-    align-self: center;
-    text-align: center;
+.intro {
+  align-self: center;
+  text-align: center;
 }
 
-p{
-    font-weight: 600;
+.p1 {
+  text-align: center;
+  font-size: 1.7rem;
+  color: rgb(71, 44, 44);
+  font-weight: 600;
 }
 
-.p1{
-    text-align: center;
-    font-size: 1.5rem;
-    color: rgb(71, 44, 44);
+.title {
+  text-align: center;
+  font-size: 2.2rem;
 }
 
-.title{
-    text-align: center;
-    font-size: 2.5rem;
+.p2 {
+  color: rgb(77, 49, 49);
+  font-size: 40px;
+  width: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: opacity 0.9s ease;
+  font-weight: 600;
 }
 
-.p2{
-    color: rgb(77, 49, 49);
-    font-size: 40px;
-    width: 400px;   
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    transition: opacity 0.9s ease;
+.icon {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
 }
 
-.icon{
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
-    gap: 1rem;
+.icon-link {
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+  font-size: 2.5rem;
+  transition: all 0.2s ease;
 }
 
-.icon-link{
-    cursor: pointer;
-    text-decoration: none;
-    color: black;
-    font-size: 30px;
-    transition: all 0.2s ease;
+.icon-link:hover {
+  color: rgb(60, 60, 60);
+  transform: scale(1.3);
 }
 
-.icon-link:hover{
-    color: rgb(60, 60, 60);
-    transform: scale(1.3);
-    
+.btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+  gap: 2rem;
 }
 
-.btn{
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
-    gap: 2rem;
+.btn-1 {
+  height: 2.8rem;
+  width: 12rem;
+  border-radius: 10px;
+  border: 2px solid black;
+  background-color: white;
+  font-size: 1.3rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: 400;
+  transition: all 0.2s ease;
 }
 
-.btn-1{
-    height: 2.5rem;
-    width: 7rem;
-    border-radius: 25px;
-    background-color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 900;
-    transition: all 0.2s ease;
+.btn-1:hover {
+  background-color: black;
+  color: white;
+  transform: scale(1.2);
 }
 
-.btn-1:hover{
-    background-color: black;
-    color: white;
-    transform: scale(1.2);
+/* -------------break-line---------------- */
+
+.nav-divider {
+  border: none;
+  height: 2px;
+  background-color: rgb(201, 175, 118);
+  margin: 0 4rem;
+  border-radius: 50px;
 }
 
+/* ------------About-Section-------------- */
 
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 4vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
 
+.about-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 1.4rem 0;
+}
+
+.p-cont {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 5px;
+  color: black;
+}
+
+.h2-cont {
+  font-size: 3rem;
+  font-weight: 600;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: black;
+}
+
+.about-content,
+.about-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.about-content {
+  margin: 2rem;
+}
+
+.abt-img {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+  margin: 40px;
+}
+
+.abt-prf-img {
+  border-radius: 25px;
+  width: 100%;
+  height: auto;
+  border: none;
+}
+
+.abt-icon {
+  height: 40px;
+}
+
+.abt-box-1 {
+  border: 1px solid grey;
+  border-radius: 30px;
+  box-shadow: 1cap;
+  margin: 10px;
+  height: 8rem;
+  width: 20rem;
+  font-size: 1rem;
+  padding: 20px;
+  background-color: rgba(211, 211, 207, 0.3);
+}
+
+.abt-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.text-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  height: 8rem;
+  width: 45rem;
+  margin-top: 4rem;
+}
+
+.abt-text {
+  color: rgb(85, 85, 85);
+  font-size: 18px;
+  background-color: rgba(210, 210, 210, 0.3);
+  /* margin: 10px; */
+  border-radius: 30px;
+}
+
+/* -------------break-line---------------- */
+
+.nav-divider {
+  border: none;
+  height: 2px;
+  background-color: rgb(201, 175, 118);
+  margin: 0 4vh;
+  border-radius: 50px;
+}
+
+/* -------------Skills------------- */
+
+.skills {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 4vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
+
+.skills-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0.3rem 0;
+}
+
+.skills-box-top {
+  display: flex;
+  flex-direction: row;
+  gap: 7rem;
+  margin-top: 2rem;
+}
+
+.skills-box-bottom {
+  display: flex;
+  flex-direction: row;
+  gap: 7rem;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.skills-box {
+  border: 1px solid black;
+  border-radius: 25px;
+  height: 15rem;
+  width: 35rem;
+}
+
+.skill-box-text {
+  margin: 1.5rem;
+}
+
+.skills-box-p {
+  font-size: 25px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
+.skills-box-span {
+  display: flex;
+  flex-wrap: wrap;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  max-width: 600px;
+  margin: 0 20px;
+}
+
+.skill-item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.skill-icon {
+  height: 20px;
+  width: 20px;
+  color: rgb(55, 52, 52);
+}
+
+.skill-icon-text {
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(55, 52, 52);
+}
+
+/* -------------break-line---------------- */
+
+.nav-divider {
+  border: none;
+  height: 2px;
+  background-color: rgb(201, 175, 118);
+  margin: 0 4vh;
+  border-radius: 50px;
+}
+
+/* --------------Projects------------- */
+
+.projects {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 4vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
+
+.projects-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0.3rem 0;
+}
